--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -32,7 +32,9 @@ spec:
             datacenter: 'Hamburg'
             folder: '/Hamburg/vm/Kubermatic-ci'
             password: << VSPHERE_PASSWORD >>
-            # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+            # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically3
+            cluster: Kubermatic
+            vmAntiAffinity: true
             datastore: vsan
             cpus: 2
             MemoryMB: 2048
